raft: add get api
